# StatCom-MCYJ-downloader

./: .gitignore  DISCREPANCY_REPORT.md  FIX_SUMMARY.md  README.md  TASK_COMPLETION_SUMMARY.txt  get_download_list.py  investigate_sha.py  mcyj_download.py  parse_licensing_rules.py  parse_parquet_violations.py  pull_agency_info_api.py  pyproject.toml
.github/workflows/: deploy-pages.yml  run-llm.yml  sync-production.yml
facility_information/: MCYJ_annotations.csv  facility_information.csv  pull_facility_info.py
pdf_parsing/: README.md  document_info.csv  extract_document_info.py  sir_summaries.csv  sir_violation_levels.csv  update_sir_summaries.py  update_summaryqueries.py  update_violation_levels.py  violation_curation_keyword_reduction.csv
pdf_parsing/parquet_files/: 20251103_142412_pdf_text.parquet
website/: README.md  build.sh  document.html  export_parquet_to_json.py  facilities.html  generate_website_data.py  index.html  keyword_reduction.py  keywords.html  package-lock.json  package.json  vite.config.js
website/src/: apiService.js  document-entry.jsx  document.js  facilities-entry.jsx  index.jsx  keywords-entry.jsx  keywords.js  main.js
website/src/components/: AgencyCard.jsx  AutocompleteInput.jsx  BarChart.jsx  DocumentItem.jsx  FilterPanel.jsx  Header.jsx  KeywordBadge.jsx  Loading.jsx  index.js
website/src/pages/: App.jsx  DocumentPage.jsx  FacilitiesPage.jsx  KeywordsPage.jsx  index.js
website/src/styles/: common.css
website/src/utils/: helpers.js
