[project]
name = "mcyj-datapipeline"
version = "0.1.0"
description = "MCYJ data pipeline for PDF parsing and special report processing"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
    "regex>=2023.10.0",
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []